# ggez_3d

./: Cargo.toml  LICENSE  README.md
examples/: test.rs
resources/: cube.wgsl  fancy.wgsl
src/: camera.rs  canvas.rs  lib.rs  mesh.rs  pipeline.rs
